# telegramBot

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
bot/: __main__.py
bot/commands/: __init__.py  cancel.py  functional.py  start.py
bot/model/: video.py
tests/: test_download_images.py
tests/test_handler/: test_download_images.py  test_start.py
