[tool.poetry]
name = "botbookcounter"
version = "0.1.0"
description = ""
authors = ["Eremetko Valentin <32tut32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
router = "^0.1"
aiogram = {url = "https://github.com/aiogram/aiogram/archive/refs/heads/dev-3.x.zip"}
clients = "^1.4"
tgclient = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
