[tool.poetry]
name = "botbookcounter"
version = "0.1.0"
description = ""
authors = ["Eremetko Valentin <32tut32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
router = "^0.1"
clients = "^1.4"
tgclient = "^1.5.3"
google = "^3.0.0"
google-api-python-client = "^2.80.0"
oauth2client = "^4.1.3"
aiogram = "3.0.0b7"
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
icrawler = "^0.6.6"
pillow = "^9.4.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
